--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,11 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public",
-                "output": "/assets/"
+                "output": "src/assets"
               }
             ],
             "styles": [
@@ -95,10 +96,11 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public",
-                "output": "/assets/"
+                "output": "src/assets"
               }
             ],
 
