--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.3",
+    "@coreui/angular": "^5.2.3",
     "@developer-partners/ngx-modal-dialog": "^1.0.5",
+    "angular-bootstrap-md": "^15.0.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ngx-bootstrap": "^12.0.0",
